fix: sec 2 align to bottom

--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
   height: 100vh;
   overflow: hidden;
-  padding-top: 128px;
   gap: 32px;
 }
 
@@ -94,6 +94,7 @@ body {
 
 .sec-2 img {
   border-radius: 16px;
+  margin-bottom: -128px;
 }
 /*#endregion */
 
